--- a/pur_beurre/users/templates/users/login.html
+++ b/pur_beurre/users/templates/users/login.html
@@ -16,10 +16,11 @@
                 </form>
                 <div class="account">
                     <br>Envie d'un compte? <a href="{% url 'users:create' %}"> Créez le ici !</a>
-                </div><br>
-                <h3 class="text-center mt-0 font-custom-title">
-                <a href="{% url 'password_reset' %}"><button>Réinitialiser votre mot de passe</button></a>
-                </h3>
+                </div>
+                <br>
+                <div class="text-center mt-0 font-custom-title">
+                <a href="{% url 'password_reset' %}">Réinitialiser votre mot de passe</a>
+                </div>
             </div>
         </div>
     </div>
