--- a/pur_beurre/templates/layouts/_nav.html
+++ b/pur_beurre/templates/layouts/_nav.html
@@ -8,7 +8,7 @@
 
                 <li class="nav-item">
                     <form action="{% url 'food:search' %}" method="GET">
-                    <input type="search" name="search" placeholder="Substituer un produit ?" size="30px">
+                    <input type="search" name="search" id="searchbox" placeholder="Substituer un produit ?" size="30px">
                     </form>
                   </li>
             
