--- a/pur_beurre/users/templates/registration/password_reset_done.html
+++ b/pur_beurre/users/templates/registration/password_reset_done.html
@@ -10,7 +10,7 @@
                 <div class="text-white mt-0">
                     Si un utilisateur correspondant à cette email a été trouvé, 
                     vous allez recevoir un mail contenant un lien pour la modification du mot de passe. 
-                    Consulter votre boîte mail pour finaliser la procédure.
+                    Veuillez consulter votre boîte mail pour finaliser la procédure.
                 </div>
             </div>
         </div>
