--- a/pur_beurre/users/templates/registration/password_reset_complete.html
+++ b/pur_beurre/users/templates/registration/password_reset_complete.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-center text-center">
             <div class="col-lg-10 align-self-end">
-                <h2 class="text-uppercase text-white font-weight-bold">Mise à jour du mote de passe terminée avec succès</h2>
+                <h2 class="text-uppercase text-white font-weight-bold">Mise à jour du mot de passe terminée avec succès</h2>
                 <hr class="divider my-4" />
                 <div>
                     <a href="{% url 'users:login' %}">Se connecter?</a>
